status key overflow and alignment fixes

--- a/app/assets/stylesheets/sage/docs/_status_key.scss
+++ b/app/assets/stylesheets/sage/docs/_status_key.scss
@@ -7,13 +7,13 @@
 .status-key {
   display: flex;
   align-items: center;
-
-  + .status-key {
-    margin-left: sage-spacing();
-  }
+  flex-wrap: wrap;
+  flex-grow: 1;
+  margin-right: sage-spacing(sm);
 
   &__wrapper {
     display: flex;
+    flex-wrap: wrap;
     margin-bottom: sage-spacing();
   }
 
@@ -53,5 +53,13 @@
     font-size: sage-font-size(sm);
     font-weight: sage-font-weight(semibold);
     color: sage-color(charcoal, 200);
+  }
+
+  @media screen and (min-width: sage-breakpoint(lg-min)) {
+    flex-grow: 0;
+  }
+
+  @media screen and (min-width: sage-breakpoint(xl-min)) {
+    margin-right: sage-spacing(lg);
   }
 }
